--- a/app/assets/stylesheets/application/layout.less
+++ b/app/assets/stylesheets/application/layout.less
@@ -43,6 +43,10 @@ main {
 header > h1 {
   float: left;
   margin: 3px 0 0 5px;
+
+  @media (max-width: 500px) {
+    margin-top: 5px;
+  }
 }
 
 header > .button {
